--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "assignment-autotest"]
 	path = assignment-autotest
 	url = https://github.com/cu-ecen-aeld/assignment-autotest.git
+
+[submodule "linux"]
+	path = linux
+	url = https://github.com/ThrowTheSwitch/linux.git
